Добавил форму обновления данных профиля, загрузку фото из данных серевера

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,31 +10,35 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="15dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/headerProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="15dp"
-            android:id="@+id/headerProfile">
+            app:cardCornerRadius="15dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:padding="5dp">
+
                 <RelativeLayout
                     android:id="@+id/fioPhoto"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardViewPhoto"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
-                        app:cardCornerRadius="80dp"
-                        android:elevation="10dp">
+                        android:elevation="10dp"
+                        app:cardCornerRadius="80dp">
+
                         <ImageView
                             android:id="@+id/imageViewPhotoUser"
                             android:layout_width="75dp"
@@ -42,48 +46,52 @@
                             android:adjustViewBounds="true"
                             android:background="@color/green"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/ic_empty_photo"
-                            />
+                            android:src="@drawable/ic_empty_photo" />
 
                     </androidx.cardview.widget.CardView>
+
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
+                        android:layout_centerVertical="true"
                         android:layout_marginLeft="25dp"
                         android:layout_toEndOf="@+id/cardViewPhoto"
-                        android:layout_centerVertical="true">
+                        android:orientation="vertical">
+
                         <TextView
-                            android:textSize="18sp"
                             android:id="@+id/surnamenameTextview"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:text="Имя Фамилия"
                             android:textColor="@color/black"
-                            android:text="Имя Фамилия"/>
+                            android:textSize="18sp" />
+
                         <TextView
                             android:id="@+id/patronymicTextview"
-                            android:textSize="18sp"
-                            android:textColor="@color/black"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@+id/surnamenameTextview"
                             android:layout_centerHorizontal="true"
-                            android:text="Отчество"/>
+                            android:text="Отчество"
+                            android:textColor="@color/black"
+                            android:textSize="18sp" />
                     </RelativeLayout>
                 </RelativeLayout>
 
 
                 <LinearLayout
+                    android:id="@+id/helpRatingContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/helpRatingContent"
                     android:layout_below="@+id/fioPhoto"
-                    android:baselineAligned="false">
+                    android:baselineAligned="false"
+                    android:orientation="horizontal">
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1">
+
                         <ImageView
                             android:id="@+id/iconlabelCountHelp"
                             android:layout_width="33dp"
@@ -91,56 +99,60 @@
                             android:layout_marginVertical="8.5dp"
                             android:layout_marginRight="5dp"
                             android:src="@drawable/ic_heath_2" />
+
                         <TextView
                             android:id="@+id/labelAboutHelp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toEndOf="@+id/iconlabelCountHelp"
                             android:layout_centerVertical="true"
-                            android:textSize="16sp"
-                            android:textColor="@color/black"
                             android:layout_marginRight="6dp"
-                            android:text="Помощь:"/>
+                            android:layout_toEndOf="@+id/iconlabelCountHelp"
+                            android:text="Помощь:"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+
                         <TextView
                             android:id="@+id/labelCountHelp"
-                            android:layout_toEndOf="@+id/labelAboutHelp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:textSize="16sp"
+                            android:layout_toEndOf="@+id/labelAboutHelp"
+                            android:text="2456"
                             android:textColor="@color/black"
-                            android:text="2456"/>
+                            android:textSize="16sp" />
                     </RelativeLayout>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1.5"
-                        >
+                        android:layout_weight="1.5">
+
                         <ImageView
                             android:id="@+id/iconlabelRating"
                             android:layout_width="33dp"
                             android:layout_height="33dp"
                             android:layout_marginVertical="8.5dp"
                             android:src="@drawable/ic_color_rating" />
+
                         <TextView
                             android:id="@+id/labelRating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="16sp"
                             android:layout_centerVertical="true"
-                            android:layout_toEndOf="@id/iconlabelRating"
-                            android:textColor="@color/black"
                             android:layout_marginRight="6dp"
-                            android:text="Рейтинг:"/>
+                            android:layout_toEndOf="@id/iconlabelRating"
+                            android:text="Рейтинг:"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+
                         <TextView
-                            android:layout_toEndOf="@+id/labelRating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="16sp"
                             android:layout_centerVertical="true"
+                            android:layout_toEndOf="@+id/labelRating"
+                            android:text="2456"
                             android:textColor="@color/black"
-                            android:text="2456"/>
+                            android:textSize="16sp" />
                     </RelativeLayout>
                 </LinearLayout>
             </RelativeLayout>
@@ -150,11 +162,12 @@
             android:id="@+id/buttonEditProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/editButtonInProfile"
-            android:textColor="@color/black"
             android:layout_below="@+id/headerProfile"
             android:layout_margin="4dp"
-            android:text="Редактировать"/>
+            android:backgroundTint="@color/editButtonInProfile"
+            android:onClick="goUserDataEditingActivity"
+            android:text="Редактировать"
+            android:textColor="@color/black" />
 
 
         <androidx.cardview.widget.CardView
@@ -163,63 +176,76 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/buttonEditProfile"
             app:cardCornerRadius="20dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:baselineAligned="false"
                 android:orientation="horizontal"
-                android:padding="5dp"
-                android:baselineAligned="false">
+                android:padding="5dp">
+
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
+
                     <ImageButton
                         android:id="@+id/helpIcon"
                         style="@style/TollbarIcon"
                         android:src="@drawable/ic_heath_2" />
+
                     <TextView
                         style="@style/ToolbarTextview"
                         android:layout_below="@id/helpIcon"
                         android:text="Моя помощь" />
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
+
                     <ImageButton
                         android:id="@+id/myRatingIcon"
                         style="@style/TollbarIcon"
                         android:background="@color/white"
                         android:src="@drawable/ic_color_rating" />
+
                     <TextView
                         style="@style/ToolbarTextview"
                         android:layout_below="@id/myRatingIcon"
                         android:text="Мой рейтинг" />
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
+
                     <ImageButton
                         android:id="@+id/mygroupIcon"
                         style="@style/TollbarIcon"
                         android:background="@color/white"
                         android:src="@drawable/ic_group" />
+
                     <TextView
                         style="@style/ToolbarTextview"
                         android:layout_below="@id/mygroupIcon"
-                        android:textAlignment="center"
-                        android:text="Объединение" />
+                        android:text="Объединение"
+                        android:textAlignment="center" />
                 </RelativeLayout>
+
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
+
                     <ImageButton
                         android:id="@+id/settingsIcon"
                         style="@style/TollbarIcon"
                         android:background="@color/white"
                         android:src="@drawable/ic_settings" />
+
                     <TextView
                         style="@style/ToolbarTextview"
                         android:layout_below="@id/settingsIcon"
