--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/toolbar"
             android:baselineAligned="false">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginRight="15dp"
                 android:baselineAligned="false"
                 android:divider="@color/black"
                 android:orientation="horizontal"
-                android:showDividers="middle"
-                android:layout_marginRight="15dp">
+                android:showDividers="middle">
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -59,8 +62,7 @@
                     <ImageButton
                         android:id="@+id/requestHelp"
                         style="@style/TollbarIcon"
-                        android:src="@drawable/ic_newrequsthelp"
-                        android:onClick="testOpenProfile"/>
+                        android:src="@drawable/ic_newrequsthelp" />
 
                     <TextView
                         style="@style/ToolbarTextview"
@@ -70,16 +72,16 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/profileButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:id="@+id/profileButton">
+                    android:layout_weight="1">
 
                     <ImageButton
                         android:id="@+id/profile"
                         style="@style/TollbarIcon"
-                        android:src="@drawable/ic_profile"
-                        android:onClick="goProfileActivity"/>
+                        android:onClick="goProfileActivity"
+                        android:src="@drawable/ic_profile" />
 
                     <TextView
                         android:id="@+id/profileTextview"
