--- a/app/src/main/res/layout/activity_updating_user_data.xml
+++ b/app/src/main/res/layout/activity_updating_user_data.xml
@@ -25,30 +25,40 @@
                 android:layout_margin="8dp"
                 app:cardCornerRadius="15dp">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:padding="15dp">
+                    <LinearLayout
+                        android:id="@+id/emblemaAndName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginRight="10dp"
+                            android:src="@drawable/emblema_doo"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/app_name"
+                            android:layout_gravity="center_vertical"
+                            android:textColor="@color/flamingo"
+                            android:textSize="32sp"
+                            android:textStyle="italic" />
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="15dp"
-                        android:gravity="center"
-                        android:text="@string/app_name"
-                        android:textColor="@color/flamingo"
-                        android:textSize="32sp"
-                        android:textStyle="italic" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="20sp"
+                        android:layout_below="@+id/emblemaAndName"
                         android:gravity="center"
                         android:text="Редактировать профиль"
                         android:textSize="20sp" />
-                </LinearLayout>
+                </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
