--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,39 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/greyBackground"
     tools:context=".StartActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@color/greyBackground"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="3dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ListView
-                android:id="@+id/listViewTypesRequest"
+                android:id="@+id/listViewRequests"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:divider="@color/greyBackground"
-                android:dividerHeight="3dp"
+                android:dividerHeight="12dp"
                 android:paddingHorizontal="12dp"
                 android:scrollbars="none" />
+
+            <RelativeLayout
+                android:id="@+id/toolbarBotoom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true">
+
+                <include
+                    layout="@layout/toolbar_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/toolbarBotoom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <include
-            layout="@layout/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-
 </RelativeLayout>
