--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="activeIcon">#C7D0CC</color>
     <color name="editButtonInProfile">#f6f6c2</color>
     <color name="greyBackground">#f2f2f2</color>
+    <color name="white_green">#bdecb6</color>
+    <color name="white_red">#b03f35</color>
+    <color name="white_bezn">#f5f5dc</color>
 </resources>
