--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="white_green">#bdecb6</color>
     <color name="white_red">#b03f35</color>
     <color name="white_bezn">#f5f5dc</color>
+    <color name="whote_yellow">#FFE2B7</color>
 </resources>
