--- a/app/src/main/res/layout/participants_listview_layout.xml
+++ b/app/src/main/res/layout/participants_listview_layout.xml
@@ -8,6 +8,7 @@
     android:backgroundTint="@color/white_bezn">
 
     <RelativeLayout
+        android:id="@+id/rl_container_part"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="10dp"
